# Boostcamp-AI-Tech-Product-Serving

02-online-serving(fastapi)/projects/cv_serving/: README.md  api.py  main.py  pyproject.toml
02-online-serving(fastapi)/projects/cv_serving/model/: requirements.txt
02-online-serving(fastapi)/projects/web_single/: README.md  api.py  config.py  database.py  dependencies.py  main.py  pyproject.toml  schemas.py
