[tool.poetry]
name = "web-single"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]
readme = "README.md"
packages = [{include = "web_single"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.105.0"}
scikit-learn = "1.2.2"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
python-multipart = "^0.0.6"
commitizen = "^3.16.0"
black = "23.9.1"
matplotlib = "3.7.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
pillow = "9.4.0"
python-dotenv = "1.0.0"
tensorboard = "2.13.0"
torch = "2.1.1"
torchvision = "0.16.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
